<resources>
    <string name="app_name">Project</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="title_activity_food">FoodActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add">Add to compare</string>

    <string name="search">Search</string>
    <string name="no_filter">No Filter</string>
    <string name="below_150">0–150</string>
    <string name="below_300">150–300</string>
    <string name="below_600">300–600</string>
    <string name="below_800">600–800</string>
    <string name="above_800">Above 800</string>

</resources>